# refine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  EA_swap_only.py  auto_run.py  cal_dataflow.py  common.py  conclusion.py  countdown.py  cp_figs.sh  draw_placement.py  extract_results.py  for_human.py  front_bbo_run.py  grid_search.py  mixedmask.py  modify_pl.py  place_db.py  preprocessing.py  results  tmp.sh  utils.py  wiremask.py
benchmarks/: .gitignore
benchmarks/simple/: 32bit-add-sub.drawio  32bit-adder.drawio
benchmarks/simple/add_sub32/: add-sub-32bit.drawio  add_sub32.aux  add_sub32.nets  add_sub32.nodes  add_sub32.pl  add_sub32.scl  add_sub32.wts
benchmarks/simple/adder32/: adder-32bit.drawio  adder32.aux  adder32.nets  adder32.nodes  adder32.pl  adder32.wts
cmake/: TorchExtension.cmake
datamask/: .gitignore  EA_swap_only.py  cal_dataflow.py  common.py  datamask.py  draw_placement.py  mixedmask.py  place_db.py  utils.py  utils_ori.py  wiremask.py
doc/: datamask_flow.drawio  refine_flow.drawio  total_flow.drawio
dreamplace/: NonLinearPlace.py  Params.py  PlaceDB.py  PlaceObj.py  Placer.py  Timer.py
dreamplace/ops/: CMakeLists.txt
dreamplace/ops/place_io/: CMakeLists.txt  place_io.py
dreamplace/ops/place_io/src/: Dataflow.cpp  Dataflow.h  Dataflow_tmp.h  MacroPin.h  Params.cpp  PlaceDB.h  mytest.cpp  mytest.h  place_io.cpp
front_bbo_run/: common.py  place_db.py  utils.py  wiremask.py
log/: log.md  problems.md
log/figures/: x_out_0_0.drawio
test/ispd2005/: adaptec1.json  adaptec2.json  adaptec3.json  adaptec4.json  bigblue1.json  bigblue2.json  bigblue3.json  bigblue4.json  config.json
test/ispd2005/adam/: adaptec1.json  adaptec2.json  adaptec3.json  adaptec4.json  bigblue1.json  bigblue2.json  bigblue3.json  bigblue4.json
test/ispd2005/momentum/: adaptec1.json  adaptec2.json  adaptec3.json  adaptec4.json  bigblue1.json  bigblue2.json  bigblue3.json  bigblue4.json
